--- a/GammaJet/test/Makefile
+++ b/GammaJet/test/Makefile
@@ -29,8 +29,8 @@ do2ndLevel_PhotonJet_batch: AnalysisJet.o AnalysisPhoton.o TreeAnalyzer.o TreeAn
 do2ndLevel_VHgg_batch: AnalysisJet.o AnalysisPhoton.o TreeAnalyzer.o TreeAnalyzer_VHgg.o  do2ndLevel_VHgg_batch.cpp
 	$(CC) -Wall -o do2ndLevel_VHgg_batch do2ndLevel_VHgg_batch.cpp AnalysisJet.o AnalysisPhoton.o TreeAnalyzer.o TreeAnalyzer_VHgg.o $(ROOTFLAG) $(EXTRALIBS)
 
-do2ndLevel_MultiJet_batch: AnalysisJet.o AnalysisPhoton.o TreeAnalyzer.o TreeAnalyzer_MultiJet.o  do2ndLevel_MultiJet_batch.cpp
-	$(CC) -Wall -o do2ndLevel_MultiJet_batch do2ndLevel_MultiJet_batch.cpp AnalysisJet.o AnalysisPhoton.o TreeAnalyzer.o TreeAnalyzer_MultiJet.o $(ROOTFLAG) $(EXTRALIBS)
+do2ndLevel_MultiJet_batch: AnalysisJet.o TreeAnalyzer.o TreeAnalyzer_MultiJet.o  QGLikelihoodCalculator.o do2ndLevel_MultiJet_batch.cpp
+	$(CC) -Wall $(INCLUDES) -o do2ndLevel_MultiJet_batch do2ndLevel_MultiJet_batch.cpp AnalysisJet.o TreeAnalyzer.o TreeAnalyzer_MultiJet.o QGLikelihoodCalculator.o $(ROOTFLAG) $(EXTRALIBS)
 
 do2ndLevel_PhotonJetInclusive_batch: AnalysisJet.o AnalysisPhoton.o TreeAnalyzer.o TreeAnalyzer_PhotonJetInclusive.o fitTools.o do2ndLevel_PhotonJetInclusive_batch.cpp
 	$(CC) -Wall -o do2ndLevel_PhotonJetInclusive_batch do2ndLevel_PhotonJetInclusive_batch.cpp AnalysisJet.o AnalysisPhoton.o TreeAnalyzer.o TreeAnalyzer_PhotonJetInclusive.o fitTools.o $(ROOTFLAG) -lMinuit
@@ -61,8 +61,8 @@ TreeAnalyzer_PhotonJet.o: TreeAnalyzer_PhotonJet.C fitTools.o
 TreeAnalyzer_VHgg.o: TreeAnalyzer_VHgg.C
 	$(CC) $(CFLAGS) -I$(CMSSW_BASE)/src/UserCode/pandolf/CommonTools TreeAnalyzer_VHgg.C $(ROOTFLAG)
 
-TreeAnalyzer_MultiJet.o: TreeAnalyzer_MultiJet.C
-	$(CC) $(CFLAGS) -I$(CMSSW_BASE)/src/UserCode/pandolf/CommonTools TreeAnalyzer_MultiJet.C $(ROOTFLAG)
+TreeAnalyzer_MultiJet.o: TreeAnalyzer_MultiJet.C QGLikelihoodCalculator.o
+	$(CC) $(CFLAGS) $(INCLUDES) QGLikelihoodCalculator.o TreeAnalyzer_MultiJet.C $(ROOTFLAG)
 
 TreeAnalyzer_PhotonJetInclusive.o: TreeAnalyzer_PhotonJetInclusive.C fitTools.o
 	$(CC) $(CFLAGS) -I$(CMSSW_BASE)/src/UserCode/pandolf/CommonTools fitTools.o TreeAnalyzer_PhotonJetInclusive.C $(ROOTFLAG)
@@ -119,6 +119,9 @@ drawMinBias: fitTools.o DrawBase.o
 drawZGamma: fitTools.o DrawBase.o drawZGamma.cpp
 	$(CC) -Wall $(INCLUDES) -o drawZGamma drawZGamma.cpp fitTools.o DrawBase.o $(ROOTFLAG) $(EXTRALIBS)
 
+
+QGLikelihoodCalculator.o: $(CMSSW_BASE)/src/UserCode/pandolf/QGLikelihood/QGLikelihoodCalculator.C 
+	$(CC) $(CFLAGS) $(INCLUDES) $(CMSSW_BASE)/src/UserCode/pandolf/QGLikelihood/QGLikelihoodCalculator.C $(ROOTFLAG) $(EXTRALIBS)
 
 DrawBase.o: $(CMSSW_BASE)/src/UserCode/pandolf/CommonTools/DrawBase.C fitTools.o
 	$(CC) $(CFLAGS) $(INCLUDES) $(CMSSW_BASE)/src/UserCode/pandolf/CommonTools/DrawBase.C fitTools.o $(ROOTFLAG) $(EXTRALIBS)
